# fibphot

./: .gitignore  LICENSE.md  README.md  pipeline.json  pyproject.toml
.github/workflows/: docs.yaml  publish.yaml
docs/source/: conf.py  index.rst
docs/source/_templates/: announcement.html
docs/source/basics/: gcamp.rst  root.rst  signals.rst
docs/source/tutorials/: 1_single_session.ipynb  2_analysis.ipynb  3_ols_irls.ipynb  root.rst
src/fibphot/: __init__.py  collection.py  misc.py  peaks.py  pipeline.py  plotting.py  state.py  tags.py  types.py
src/fibphot/analysis/: __init__.py  aggregate.py  auc.py  connectivity.py  epochs.py  events.py  irls.py  peak_aligned.py  peaks.py  photobleaching.py  plotting.py  qc.py  report.py  statistics.py
src/fibphot/fit/: regression.py
src/fibphot/gui/: README.md  __init__.py  app.py  registry.py  session.py  widgets.py
src/fibphot/io/: __init__.py  doric.py  excel.py  h5.py
src/fibphot/stages/: __init__.py  base.py  baseline.py  control_dff.py  filters.py  normalisation.py  regression.py  smooth.py  trim.py
