[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibphot"
version = "0.1.3"
description = "Analysis pipeline for fibre photometry data"
readme = "README.md"
authors = [{ name = "Thomas Nicholas", email = "tcnicholas@me.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pybaselines>=1.2.1",
    "scipy>=1.17.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
topo_metrics = ["RingStatistics/**/*"]

[project.urls]
Homepage = "https://github.com/tcnicholas/fibphot"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.13",
    "pytest>=8.0",
    "matplotlib>=3.10.8",
]
publish = ["build", "twine"]
docs = [
    "sphinx",
    "pip",
    "furo",
    "nbsphinx",
    "ipython",
    "pyzmq",
    "sphinx-autoapi",
    "sphinx-autobuild",
    "pydata_sphinx_theme",
    "sphinxext-opengraph",
    "sphinx-copybutton",
    "sphinx-design",
    "jupyter_sphinx",
    "sphinx-togglebutton",
    "sphinx_favicon",
    "sphinx_sitemap",
]

[tool.bumpver]
current_version = "0.1.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/fibphot/__init__.py" = ["{version}"]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py38"
extend-include = ["*.ipynb", "*.pyi", "*.toml"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["SIM300", "E402", "E703", "F722", "UP037", "F821", "B018", "E741"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"